# lab1

./: CMakeLists.txt
2_invaders/: Ship.h  bullet.cpp  bullet.h  game.h  main.cpp  ship.cpp
2_invadersBuild/: 2_INVADERS.vcxproj  2_INVADERS.vcxproj.filters  ALL_BUILD.vcxproj  CMakeCache.txt  Games_Engineering.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PRACTICAL_1.vcxproj  PRACTICAL_1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  copy_resources.vcxproj  copy_resources.vcxproj.filters
2_invadersBuild/2_INVADERS.dir/Debug/: 2_INVADERS.exe.recipe
2_invadersBuild/2_INVADERS.dir/Debug/2_INVADERS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
2_invadersBuild/PRACTICAL_1.dir/Debug/: PRACTICAL_1.exe.recipe
2_invadersBuild/PRACTICAL_1.dir/Debug/PRACTICAL_1.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
2_invadersBuild/lib/sfml/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  SFML.sln  SFMLSharedTargets.cmake  cmake_install.cmake
2_invadersBuild/lib/sfml/lib/Debug/: sfml-audio-d.exp  sfml-graphics-d.exp  sfml-network-d.exp  sfml-system-d.exp  sfml-window-d.exp
2_invadersBuild/lib/sfml/src/SFML/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
2_invadersBuild/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
2_invadersBuild/x64/Debug/copy_resources/: copy_resources.recipe
2_invadersBuild/x64/Debug/copy_resources/copy_resources.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+2 more)
3_tilemap/: Entitiy.cpp  Entity.h  Player.cpp  Player.h  game.h  main.cpp
3_tilemapBuild/: 2_INVADERS.vcxproj  2_INVADERS.vcxproj.filters  3_TILEMAP.vcxproj  3_TILEMAP.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Games_Engineering.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PRACTICAL_1.vcxproj  PRACTICAL_1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lib_tile_level_loader.vcxproj  lib_tile_level_loader.vcxproj.filters
3_tilemapBuild/2_INVADERS.dir/Debug/: 2_INVADERS.exe.recipe
3_tilemapBuild/2_INVADERS.dir/Debug/2_INVADERS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
3_tilemapBuild/3_TILEMAP.dir/Debug/: 3_TILEMAP.exe.recipe
3_tilemapBuild/3_TILEMAP.dir/Debug/3_TILEMAP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
3_tilemapBuild/PRACTICAL_1.dir/Debug/: PRACTICAL_1.exe.recipe
3_tilemapBuild/PRACTICAL_1.dir/Debug/PRACTICAL_1.tlog/: CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
3_tilemapBuild/lib/sfml/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  SFML.sln  SFMLSharedTargets.cmake  cmake_install.cmake
3_tilemapBuild/lib_tile_level_loader.dir/Debug/: lib_tile_level_loader.lib.recipe  lib_tile_level_loader.vcxproj.FileListAbsolute.txt
3_tilemapBuild/lib_tile_level_loader.dir/Debug/lib_tile.598F72FA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
3_tilemapBuild/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
3_tilemapBuild/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
4_pacman/: cmp_actor_movement.h  cmp_enemy_ai.cpp  cmp_enemy_ai.h  cmp_pickup.cpp  cmp_pickup.h  cmp_player_movement.cpp  cmp_player_movement.h  cmp_sprite.h  game.h  ghost.cpp  main.cpp  pacman.cpp  scene.cpp
5_physics/: Player.cpp  Player.h  cmp_actor_movement.cpp  cmp_sprite.cpp  game.h  ghost.h  main.cpp  pacman.h  scene.h
6_platformer/scenes/: scene_level2.cpp  scene_level3.cpp
7_pathfinding/: platformer_main.cpp  steering.cpp
7_pathfinding/components/: cmp_ai_steering.cpp  cmp_basic_movement.cpp  cmp_basic_movement.h
7_pathfinding/scenes/: scene_menu.cpp  scene_pathfinding.cpp  scene_steering.h
8_states/: astar.cpp  steering.h  steering_decisions.h  steering_states.cpp  steering_states.h
8_states/components/: cmp_decision_tree.cpp  cmp_decision_tree.h  cmp_path_follow.h
8_states/scenes/: scene_decision.cpp  scene_pathfinding.h  scene_state.cpp  scene_steering.cpp
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h
practical_1/: main.cpp
pratical1Build/: ALL_BUILD.vcxproj  CMakeCache.txt  Games_Engineering.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PRACTICAL_1.vcxproj  PRACTICAL_1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
pratical1Build/PRACTICAL_1.dir/Debug/: PRACTICAL_1.exe.recipe
pratical1Build/PRACTICAL_1.dir/Debug/PRACTICAL_1.tlog/: CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
pratical1Build/lib/sfml/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  SFML.sln  SFMLSharedTargets.cmake  cmake_install.cmake
pratical1Build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
pratical_1/: main.cpp
res/: level_1.txt.url
(+253 files in other folders)
